enforce SOLID/MVC principles and fix package structure